rsfg/tests/scripts/error/unknown-fn.sfg
fn main()
	unknown(5)

